<resources>
    <string name="app_name">Lessons 7</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textRadioButton">Red</string>
    <string name="text">Hello World</string>
    <string name="radioButtonRedColor">Red</string>
    <string name="radioButtonBlueColor">Blue</string>
    <string name="radioButtonDefaultColor">Default</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="showHide">Show text?</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>
